# Dabba

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  api-map.md  architecture.md  database-map.md  dependency-graph.md  docker-compose.yml  memory.md  mlflow.db  pyproject.toml  requirements.txt  routes.md  setup_kaggle.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: auth.py  limiter.py  main.py  schemas.py
api/routers/: __init__.py  chat.py  eta.py  explain.py  model_info.py  recommend.py  restaurants.py
app/: streamlit_app.py
app/assets/: theme.css
app/components/: __init__.py  restaurant_card.py
app/pages/: 1_customer_view.py  2_ops_view.py  3_model_info.py  __init__.py  page_concierge.py  page_discover.py  page_model_performance.py  page_ops.py
app/utils/: __init__.py  sanitize.py
data/: dabba.db  dabba.db-shm  dabba.db-wal
docker/: api.Dockerfile  entrypoint.sh  mlflow.Dockerfile  streamlit.Dockerfile
notebooks/: 01_eda_restaurants.ipynb  02_eda_delivery.ipynb  03_sentiment_analysis.ipynb  04_recommender_prototyping.ipynb  05_eta_modeling.ipynb  06_explainability.ipynb
reports/figures/: eta_shap_values.npy  rating_shap_values.npy
src/dabba/: __init__.py  config.py  pipeline.py
src/dabba/cache/: __init__.py  redis_client.py
src/dabba/data/: __init__.py  cleaning.py  loaders.py
src/dabba/database/: __init__.py  models.py  repositories.py  seed.py  session.py
src/dabba/evaluation/: __init__.py  business_cost.py  metrics.py
src/dabba/features/: delivery_features.py  geo.py  restaurant_features.py  traffic.py
src/dabba/llm/: __init__.py  food_concierge.py  rag_similar_restaurants.py  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_business_cost.py  test_cleaning.py  test_collaborative_recommender.py  test_database.py  test_db_loaders.py  test_drift.py  test_eta_model.py  test_features.py  test_hinglish_sentiment.py  test_hybrid_recommender.py  test_metrics.py  test_model_selection.py  test_narrator.py  test_optimizer.py  test_optuna_tuning.py  test_rag_similar.py  test_rating_model.py  test_recommender.py  test_redis_client.py  test_retrain.py  test_traffic.py
tests/e2e/: __init__.py  test_workflow.py
tests/integration/: __init__.py  test_concierge.py
(+16 files in other folders)
