[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dabba"
version = "0.2.0"
description = "India-focused restaurant ranking, recommendation, and delivery-reliability platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.3,<2.0",
    "joblib>=1.3,<2.0",
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.0,<5.0",
    "catboost>=1.2,<2.0",
    "torch>=2.0,<3.0",
    "faiss-cpu>=1.7,<2.0",
    "nltk>=3.8,<4.0",
    "anthropic>=0.100,<1.0",
    "fastapi>=0.104,<1.0",
    "uvicorn[standard]>=0.24,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "slowapi>=0.1.9,<1.0",
    "PyJWT>=2.8,<3.0",
    "streamlit>=1.28,<2.0",
    "plotly>=5.18,<6.0",
    "matplotlib>=3.7,<4.0",
    "folium>=0.15,<1.0",
    "seaborn>=0.13,<1.0",
    "shap>=0.43,<1.0",
    "mlflow>=2.0,<4.0",
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.1,<1.0",
    "black>=23.11,<25.0",
    "isort>=5.12,<6.0",
    "kaggle>=1.5,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
